--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -33,6 +33,7 @@
 }
 .dropDownMenu{
     position: absolute;
+    background-color: #A9927D;
     padding: 10px 10px 30px 10px;
     border-style: solid;
     border-radius: 10px;
