--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -24,6 +24,16 @@
     margin: 0px 0px 0px 50px;
     font-size: 50px;
 }
+
+.profilePic{
+    background: transparent;
+    border-style: solid;
+    border-radius: 100%;
+    color: #49111C;
+  
+    width: 50px;
+    height: 50px;
+}
 .downArrow{
     background: transparent;
     border: none;
